--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "file-upload-react": "^0.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.10.1",
     "react-hooks-useform": "^0.1.86",
     "react-images-uploading": "^3.1.2",
     "react-router-dom": "^5.2.0",
